[package]
edition = "2018"
name = "web_server"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = {version = "0.3.1"}
chrono = "0.4.19"
dotenv = "0.15.0"
hyper = {version = "0.14", features = ["full"]}
pretty = {version = "0.10.0", features = ["termcolor"]}
termcolor = {version = "1.1.0", optional = true}
tokio = {version = "1.13.0", features = ["full"]}
tower = {version = "0.4", features = ["make"]}
tower-http = {version = "0.1.1", features = ["full"]}
tracing-subscriber = {version = "0.3", features = ["env-filter"]}

[profile.release]
lto = true
codegen-units = 1
opt-level = 'z'
panic = 'abort'